--- a/index.html
+++ b/index.html
@@ -1,7 +1,40 @@
+
+
 <!DOCTYPE html>
-<html>
-    <body background="https://previews.123rf.com/images/nobilior/nobilior1207/nobilior120700154/14620005-Female-feet-with-a-white-rose-on-blue-blurred-background-Stock-Photo.jpg"></body>  
-    <body>
-        <p>the internet isn't the only thing kim breaks!</p>
-        </body>
-</html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>tmb</title>
+  <style>
+  body {
+    font-family: system-ui;
+    margin: 0;
+    padding: 2rem;
+    color: #222;
+    background: #fffff;
+    line-height: 1.5;
+  }
+
+  h1 {
+    font-size: 2rem;
+    font-weight: 800;
+    margin-top: 0;
+    margin-bottom: 1rem;
+  }
+
+  p {
+    margin: 0.5rem 0;
+    max-width: 28rem;
+  }
+
+  a {
+    color: #0976ff;
+    font-weight: 600;
+    text-decoration: none;
+  }
+  .space {
+    margin-left: 0.5rem;
+  }
+  </style>
+</head>
