--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>tmb</title>
+  <title>The Braille Team</title>
   <style>
   body {
     font-family: system-ui;
@@ -38,3 +36,9 @@
   }
   </style>
 </head>
+  
+<body>
+  <h1>The Braille Team</h1>
+  <p>We're trying to make a braille printer.</p>
+  <p>Look at our <a href="https://github.com/maiam6242/braille-printer">github page</a>. Consume the content.</p>
+</html>
