idea: dogs but chill and not as wet

--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
 		position:relative;
 		overflow:hidden;
 	}
+	#g-homepage .g-Img {
+		position:absolute;
+		top:20px;
+		left:20px;
+		display:block;
+		width:12.5%;
+	}
 	#g-homepage p {
 		font-family:'Source Sans Pro',sans-serif;
 		line-height:43px;
@@ -101,8 +108,9 @@
 	<div id="g-homepage" class="g-artboard" style="max-width:100%;max-height:4500px" data-aspect-ratio="0.282" data-min-width="0">
 <div style="padding: 0 0 354.9629% 0;"></div>
 		<!-- <img id="g-homepage-img" class="g-aiImg" alt="" src="homepage.png"/> -->
-		<img id="g-homepage-img" class="g-aiImg" alt="" src="Website Graphics\Header.png"/>
-		<img id="g-homepage-img" class="g-aiImg" alt="" src="Website Graphics\Logo.png"/>
+		<img id="g-homepage-img" class="g-aiImg" alt="" src="Website Graphics\Background.png"/>
+		<img id="g-homepage-img" class="g-Img" alt="" src="Website Graphics\Logo.png"/>
+
 		<div id="g-ai0-1" class="g-Layer_1 g-aiAbs g-aiPointText" style="top:3.1624%;margin-top:-17.5px;left:36.5706%;width:81px;">
 			<a style="text-decoration:none" class="g-pstyle0" href="http://www.google.com">team</a>
 		</div>
@@ -123,48 +131,34 @@
 			<p class="g-pstyle1">We&rsquo;re team <span class="g-cstyle0">dot dot dot</span>, and we created </p>
 			<p class="g-pstyle1"><span class="g-cstyle0">Portabraille</span>, a portable braille printer!</p>
 		</div>
-		<img id="g-homepage-img" class="g-aiImg" alt="" src="Website Graphics\Circles_Group1.png"/>
-		<img id="g-homepage-img" class="g-aiImg" alt="" src="Website Graphics\Image1.png"/>
-		<img id="g-homepage-img" class="g-aiImg" alt="" src="Website Graphics\Ellipses_Group1.png"/>
 
 		<div id="g-ai0-7" class="g-Layer_1 g-aiAbs" style="top:31.9531%;left:56.6751%;width:36.7854%;">
 			<p class="g-pstyle2">We created the Portabraille Printer with those who are visually impaired in mind.</p>
 			<p>&nbsp;</p>
 			<p>Insert info about user testing and any features we designed with those who are visually impaired in mind (eg: interface, portability, etc)</p>
 		</div>
-		<img id="g-homepage-img" class="g-aiImg" alt="" src="Website Graphics\Circles_Group2.png"/>
-		<img id="g-homepage-img" class="g-aiImg" alt="" src="Website Graphics\Image2.png"/>
-		<img id="g-homepage-img" class="g-aiImg" alt="" src="Website Graphics\Ellipses_Group2.png"/>
 
 		<div id="g-ai0-8" class="g-Layer_1 g-aiAbs" style="top:47.9413%;right:55.6748%;width:38.691%;">
 			<p class="g-pstyle3">The Portabraille Printer takes in a text file, converts it to braille, and embosses a sheet of paper with the converted braille.</p>
 			<p>&nbsp;</p>
 			<p class="g-pstyle4">First, users input their file via a USB port. *insert info about how the text-to-braille software works and probably a bit about the interface too, try to keep it simple and elaborate later in the blog*</p>
 		</div>
-		<img id="g-homepage-img" class="g-aiImg" alt="" src="Website Graphics\Circles_Group3.png"/>
-		<img id="g-homepage-img" class="g-aiImg" alt="" src="Website Graphics\Image3.png"/>
 
 		<div id="g-ai0-9" class="g-Layer_1 g-aiAbs" style="top:63.1127%;left:59.0617%;width:36.7854%;">
 			<p>Next, the printer *insert info about how the firmware works, also insert info about the mechanical design*</p>
 		</div>
-		<img id="g-homepage-img" class="g-aiImg" alt="" src="Website Graphics\Circles_Group4.png"/>
-		<img id="g-homepage-img" class="g-aiImg" alt="" src="Website Graphics\Image4.png"/>
 
 		<div id="g-ai0-10" class="g-Layer_1 g-aiAbs" style="top:77.2803%;right:56.2706%;width:38.691%;">
 			<p class="g-pstyle4">Finally, the Portabraille Printer spits out a page of freshly printed braille, ready for the reading!</p>
 			<p>&nbsp;</p>
 			<p class="g-pstyle4">For a more technical overview of what the printer does and how we built it, head to our blog here.</p>
 		</div>
-		<img id="g-homepage-img" class="g-aiImg" alt="" src="Website Graphics\Circles_Group5.png"/>
-		<img id="g-homepage-img" class="g-aiImg" alt="" src="Website Graphics\Image5.png"/>
-		<img id="g-homepage-img" class="g-aiImg" alt="" src="Website Graphics\Ellipses_Group3.png"/>
 
 		<div id="g-ai0-11" class="g-Layer_1 g-aiAbs" style="top:92.475%;left:49.9984%;margin-left:-36.2055%;width:72.4109%;">
 			<p class="g-pstyle5">This project was created as part of Principles of Engineering, a course at Olin College of Engineering in Needham, MA. </p>
 			<p class="g-pstyle5">*insert thank-yous/credits*</p>
 		</div>
 
-		<img id="g-homepage-img" class="g-aiImg" alt="" src="Website Graphics\Footer.png"/>
 		<div id="g-ai0-12" class="g-Layer_1 g-aiAbs g-aiPointText" style="top:99.1617%;margin-top:-17.5px;left:9.4243%;width:81px;">
 			<p class="g-pstyle0">team</p>
 		</div>
