quick website update

--- a/index.html
+++ b/index.html
@@ -100,16 +100,37 @@
 		font-weight:bold;
 	}
 
+	#g-homepage .header{
+		width:100%;
+		height:180px;
+		top:0;
+	}
+
+	#g-homepage .footer{
+		width:100%;
+		height:80px;
+		top:0;
+	}
+	.blue{
+		background:	#91daf2;
+	}
+
 </style>
 
-<div id="g-homepage-box" class="ai2html">
+<div id="g-homepage-box" class="ai2html" style="width:100%">
 
 	<!-- Artboard: Artboard_1 -->
 	<div id="g-homepage" class="g-artboard" style="max-width:100%;max-height:4500px" data-aspect-ratio="0.282" data-min-width="0">
-<div style="padding: 0 0 354.9629% 0;"></div>
+		<div class="header blue"></div>
+
+		<div style="padding: 0 0 4240px 0;"></div>
+		<div class="footer blue"> </div>
 		<!-- <img id="g-homepage-img" class="g-aiImg" alt="" src="homepage.png"/> -->
-		<img id="g-homepage-img" class="g-aiImg" alt="" src="Website Graphics\Background.png"/>
+		<!-- <img id="g-homepage-img" class="g-aiImg" alt="" src="Website Graphics\Background.png"/> -->
+
 		<img id="g-homepage-img" class="g-Img" alt="" src="Website Graphics\Logo.png"/>
+
+
 
 		<div id="g-ai0-1" class="g-Layer_1 g-aiAbs g-aiPointText" style="top:3.1624%;margin-top:-17.5px;left:36.5706%;width:81px;">
 			<a style="text-decoration:none" class="g-pstyle0" href="http://www.google.com">team</a>
