initial bare bones of the website

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 
 <head>
@@ -19,20 +18,20 @@
 
 		<img class="logo" alt="Portabraille Printer Logo" src="Website Graphics\Logo.png"/>
 
-		<div class="Layer_1 aiAbs aiPointText" style="top:3.1624%;margin-top:-17.5px;left:36.5706%;width:81px;">
-			<a style="text-decoration:none" class="pstyle0" href="http://www.google.com">team</a>
+		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;left:36.5706%;width:81px;">
+			<a style="text-decoration:none" class="tabs" href="http://www.google.com">team</a>
 		</div>
-		<div class="Layer_1 aiAbs aiPointText" style="top:3.1624%;margin-top:-17.5px;left:47.0833%;width:73px;">
-			<p class="pstyle0">blog</p>
+		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;left:47.0833%;width:73px;">
+			<p class="tabs">blog</p>
 		</div>
-		<div class="Layer_1 aiAbs aiPointText" style="top:3.1624%;margin-top:-17.5px;left:57.1787%;width:160px;">
-			<p class="pstyle0">instructions</p>
+		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;left:57.1787%;width:160px;">
+			<p class="tabs">instructions</p>
 		</div>
-		<div class="Layer_1 aiAbs aiPointText" style="top:3.1624%;margin-top:-17.5px;left:73.6791%;width:110px;">
-			<p class="pstyle0">process</p>
+		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;left:73.6791%;width:110px;">
+			<p class="tabs">process</p>
 		</div>
-		<div class="Layer_1 aiAbs aiPointText" style="top:3.1624%;margin-top:-17.5px;left:86.3531%;width:133px;">
-			<p class="pstyle0">resources</p>
+		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;left:86.3531%;width:133px;">
+			<p class="tabs">resources</p>
 		</div>
 
 		<div class="Layer_1 aiAbs" style="top:5.9985%;left:49.9236%;margin-left:-32.6429%;width:65.2858%;">
@@ -67,23 +66,20 @@
 			<p class="pstyle5">*insert thank-yous/credits*</p>
 		</div>
 
-		<div class="Layer_1 aiAbs aiPointText" style="top:99.1617%;margin-top:-17.5px;left:9.4243%;width:81px;">
-			<p class="pstyle0">team</p>
+		<div class="Layer_1 aiAbs aiPointText" style="top:4460px;margin-top:-17.5px;left:9.4243%;width:81px;">
+			<p class="tabs">team</p>
 		</div>
-		<div class="Layer_1 aiAbs aiPointText" style="top:99.1617%;margin-top:-17.5px;left:26.6748%;width:73px;">
-			<p class="pstyle0">blog</p>
+		<div class="Layer_1 aiAbs aiPointText" style="top:4460px;margin-top:-17.5px;left:26.6748%;width:73px;">
+			<p class="tabs">blog</p>
 		</div>
-		<div class="Layer_1 aiAbs aiPointText" style="top:99.1617%;margin-top:-17.5px;left:43.4786%;width:160px;">
-			<p class="pstyle0">instructions</p>
+		<div class="Layer_1 aiAbs aiPointText" style="top:4460px;margin-top:-17.5px;left:43.4786%;width:160px;">
+			<p class="tabs">instructions</p>
 		</div>
-		<div class="Layer_1 aiAbs aiPointText" style="top:99.1617%;margin-top:-17.5px;left:82.5611%;width:133px;">
-			<p class="pstyle0">resources</p>
+		<div class="Layer_1 aiAbs aiPointText" style="top:4460px;margin-top:-17.5px;left:82.5611%;width:133px;">
+			<p class="tabs">resources</p>
 		</div>
-		<div class="Layer_1 aiAbs aiPointText" style="top:99.1617%;margin-top:-17.5px;left:65.5309%;width:110px;">
-			<p class="pstyle0">process</p>
+		<div class="Layer_1 aiAbs aiPointText" style="top:4460px;margin-top:-17.5px;left:65.5309%;width:110px;">
+			<p class="tabs">process</p>
 		</div>
 	</div>
-
 </div>
-
-<!-- End ai2html - 2019-11-29 01:17 -->
