--- a/team.html
+++ b/team.html
@@ -12,35 +12,53 @@
 
 
 <div id="team-box" class="ai2html" style="width:100%">
-	<div id="team" class="artboard" style="max-width1207px;max-height: 3672px" data-aspect-ratio="0.329" data-min-width="0">
+	<div id="team" class="artboard" style="max-width:100%;max-height: 3672px" data-aspect-ratio="0.329" data-min-width="0">
 
 		<div class="header blue1"></div>
-		<div style="padding: 0 0 304.2014% 0;"></div>
+		<div style="padding: 0 0 3410px 0;"></div>
 		<div class="footer blue1"> </div>
 
-		<div class="Layer_1 aiAbs" style="top:NaN%;left:59.5027%;width:35.9569%;">
+		<img class="logo" alt="Portabraille Printer Logo" src="Website Graphics\Logo.png"/>
+
+		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;left:36.5706%;width:81px;">
+			<a style="text-decoration:none" class="tabs" href="http://www.google.com">team</a>
+		</div>
+		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;left:47.0833%;width:73px;">
+			<p class="tabs">blog</p>
+		</div>
+		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;left:57.1787%;width:160px;">
+			<p class="tabs">instructions</p>
+		</div>
+		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;left:73.6791%;width:110px;">
+			<p class="tabs">process</p>
+		</div>
+		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;left:86.3531%;width:133px;">
+			<p class="tabs">resources</p>
+		</div>
+
+		<div class="Layer_1 aiAbs" style="top:6.2%;left:59.5027%;width:35.9569%;">
 			<p>&nbsp;</p>
 			<p class="pstyle0">Our team consists of five very cool people with a variety of very cool skills!  </p>
 			<p>&nbsp;</p>
 			<p class="pstyle1">*insert other info about the team?*</p>
 		</div>
-		<div class="Layer_1 aiAbs" style="top:NaN%;left:9.5479%;width:29.4118%;">
+		<div class="Layer_1 aiAbs" style="top:30%;left:9.5479%;width:29.4118%;">
 			<p>&nbsp;</p>
 			<p class="pstyle2"><span class="cstyle0">Colin</span> is a person who has many interests and will write his own bio later probably. It&rsquo;ll be a few lines long and full of juicy details about his identity as an engineer/designer/person in the world.</p>
 		</div>
-		<div class="Layer_1 aiAbs" style="top:NaN%;left:58.198%;width:29.4118%;">
+		<div class="Layer_1 aiAbs" style="top:30%;left:58.198%;width:29.4118%;">
 			<p>&nbsp;</p>
 			<p class="pstyle2"><span class="cstyle0">Megan</span> is a person who has many interests and will write her own bio later probably. It&rsquo;ll be a few lines long and full of juicy details about her identity as an engineer/designer/person in the world.</p>
 		</div>
-		<div class="Layer_1 aiAbs" style="top:NaN%;left:9.8935%;width:29.4118%;">
+		<div class="Layer_1 aiAbs" style="top:52%;left:9.8935%;width:29.4118%;">
 			<p>&nbsp;</p>
 			<p class="pstyle2"><span class="cstyle0">Nathan </span>is a person who has many interests and will write his own bio later probably. It&rsquo;ll be a few lines long and full of juicy details about his identity as an engineer/designer/person in the world.</p>
 		</div>
-		<div class="Layer_1 aiAbs" style="top:NaN%;left:58.5435%;width:29.4118%;">
+		<div class="Layer_1 aiAbs" style="top:52%;left:58.5435%;width:29.4118%;">
 			<p>&nbsp;</p>
 			<p class="pstyle2"><span class="cstyle0">Maia </span>is a person who has many interests and will write her own bio later probably. It&rsquo;ll be a few lines long and full of juicy details about her identity as an engineer/designer/person in the world.</p>
 		</div>
-		<div class="Layer_1 aiAbs" style="top:NaN%;left:35.478%;width:29.4118%;">
+		<div class="Layer_1 aiAbs" style="top:74%;left:35.478%;width:29.4118%;">
 			<p>&nbsp;</p>
 			<p class="pstyle2"><span class="cstyle0">Annie</span> is a person who has many interests and will write her own bio later probably. It&rsquo;ll be a few lines long and full of juicy details about her identity as an engineer/designer/person in the world.</p>
 		</div>
@@ -49,6 +67,22 @@
 			<p>&nbsp;</p>
 			<p class="pstyle4">Feel free to reach out to us individually or email us *here*! </p>
 			<p class="pstyle4">We&rsquo;d love to hear any thoughts, suggestions, or cute puns you might have about this project!</p>
+		</div>
+
+		<div class="Layer_1 aiAbs aiPointText" style="top:3630px;margin-top:-17.5px;left:9.4243%;width:81px;">
+			<p class="tabs">team</p>
+		</div>
+		<div class="Layer_1 aiAbs aiPointText" style="top:3630px;margin-top:-17.5px;left:26.6748%;width:73px;">
+			<p class="tabs">blog</p>
+		</div>
+		<div class="Layer_1 aiAbs aiPointText" style="top:3630px;margin-top:-17.5px;left:43.4786%;width:160px;">
+			<p class="tabs">instructions</p>
+		</div>
+		<div class="Layer_1 aiAbs aiPointText" style="top:3630px;margin-top:-17.5px;left:82.5611%;width:133px;">
+			<p class="tabs">resources</p>
+		</div>
+		<div class="Layer_1 aiAbs aiPointText" style="top:3630px;margin-top:-17.5px;left:65.5309%;width:110px;">
+			<p class="tabs">process</p>
 		</div>
 	</div>
 </div>
