getting links to work

--- a/process.html
+++ b/process.html
@@ -16,22 +16,24 @@
 		<div style="padding: 0 0 1069px 0;"></div>
 		<div class="footer blue1"> </div>
 
-		<img class="logo" alt="Portabraille Printer Logo" src="Website Graphics\Logo.png"/>
+		<a href="https://maiam6242.github.io/braille-printer/">
+				<img class="logo" alt="Portabraille Printer Logo" src="Website Graphics\Logo.png"/>
+		</a>
 
 		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;left:36.5706%;width:81px;">
-			<a style="text-decoration:none" class="tabs" href="http://www.google.com">team</a>
+			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/team.html">team</a>
 		</div>
 		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;left:47.0833%;width:73px;">
-			<p class="tabs">blog</p>
+			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/blog.html">blog</a>
 		</div>
 		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;left:57.1787%;width:160px;">
-			<p class="tabs">instructions</p>
+			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/instructions.html">instructions</a>
 		</div>
 		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;left:73.6791%;width:110px;">
-			<p class="tabs">process</p>
+			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/process.html">process</a>
 		</div>
 		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;left:86.3531%;width:133px;">
-			<p class="tabs">resources</p>
+			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/resources.html">resources</a>
 		</div>
 
 		<div class="Layer_1 aiAbs" style="top:17.2%;left:59.5165%;width:35.9722%;">
@@ -42,19 +44,19 @@
 		</div>
 
 		<div class="Layer_1 aiAbs aiPointText" style="top:1289px;margin-top:-17.5px;left:9.4243%;width:81px;">
-			<p class="tabs">team</p>
+			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/team.html">team</a>
 		</div>
 		<div class="Layer_1 aiAbs aiPointText" style="top:1289px;margin-top:-17.5px;left:26.6748%;width:73px;">
-			<p class="tabs">blog</p>
+			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/blog.html">blog</a>
 		</div>
 		<div class="Layer_1 aiAbs aiPointText" style="top:1289px;margin-top:-17.5px;left:43.4786%;width:160px;">
-			<p class="tabs">instructions</p>
+			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/instructions.html">instructions</a>
 		</div>
 		<div class="Layer_1 aiAbs aiPointText" style="top:1289px;margin-top:-17.5px;left:82.5611%;width:133px;">
-			<p class="tabs">resources</p>
+			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/process.html">process</a>
 		</div>
 		<div class="Layer_1 aiAbs aiPointText" style="top:1289px;margin-top:-17.5px;left:65.5309%;width:110px;">
-			<p class="tabs">process</p>
+			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/resources.html">resources</a>
 		</div>
 	</div>
 </div>
