getting that sweet dropdown working

--- a/team.html
+++ b/team.html
@@ -31,9 +31,16 @@
 		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;left:57.1787%;width:160px;">
 			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/instructions.html">instructions</a>
 		</div>
-		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;left:73.6791%;width:110px;">
-			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/process.html">process</a>
-		</div>
+		<div class="dropdown Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;left:73.6791%;width:110px;">
+			<a style="text-decoration:none; padding-bottom:10px;" class="tabs" href="https://maiam6242.github.io/braille-printer/process.html">process</a>
+      <div class="dropdown-content blue2" style="left:-10px; top:40px">
+        <a href="#">sprint 1</a>
+        <a href="#">sprint 2</a>
+        <a href="#">sprint 3</a>
+        <a href="#">sprint 4</a>
+        <a href="#">budget</a>
+      </div>
+  	</div>
 		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;left:86.3531%;width:133px;">
 			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/resources.html">resources</a>
 		</div>
