adding some website graphics!

--- a/index.html
+++ b/index.html
@@ -20,6 +20,55 @@
 		    <img class="logo" alt="Portabraille Printer Logo" src="Website Graphics\Logo.png"/>
     </a>
 
+    <div class="circle450 blue3" style="left:55%;top:17%"></div>
+    <div class="circle250 blue1" style="left:72%;top:10%"></div>
+    <div class="circle675 blue2" style="left:10%;top:10%"></div>
+    <div class="frame" style="height:600px; width:880px; left:50%;margin-left:-440px;top:12%"></div>
+
+    <div class="dotdotdot" style="top:28.7%;left:50%;margin-left:-55px">
+      <div class="dot"></div>
+      <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
+      <div class="dot"></div>
+      <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
+      <div class="dot"></div>
+    </div>
+
+    <div class="circle400 blue2" style="left:3%;top:29.5%"></div>
+    <div class="circle300 blue3" style="left:3%;top:35%"></div>
+    <div class="circle150 blue1" style="left:40%;top:37.5%"></div>
+    <div class="frame" style="height:350px; width:530px; left:6%;top:32%"></div>
+
+    <div class="dotdotdot" style="top:44%;left:50%;margin-left:-55px">
+      <div class="dot"></div>
+      <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
+      <div class="dot"></div>
+      <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
+      <div class="dot"></div>
+    </div>
+
+    <div class="circle300 blue3" style="right:27%;top:53%"></div>
+    <div class="circle400 blue2" style="right:3%;top:47%"></div>
+    <div class="circle150 blue1" style="right:40%;top:47.5%"></div>
+    <div class="frame" style="height:350px; width:530px; left:52%;top:49.3%"></div>
+
+    <div class="circle300 blue3" style="left:33%;top:66%"></div>
+    <div class="circle400 blue2" style="left:3%;top:61%"></div>
+    <div class="circle150 blue1" style="left:6%;top:69%"></div>
+    <div class="frame" style="height:350px; width:530px; left:8%;top:63.3%"></div>
+
+    <div class="circle400 blue2" style="right:3%;top:77.3%"></div>
+    <div class="circle300 blue3" style="right:3%;top:74%"></div>
+    <div class="circle150 blue1" style="right:40%;top:82%"></div>
+    <div class="frame" style="height:350px; width:530px; left:52%;top:76.5%"></div>
+
+    <div class="dotdotdot" style="top:88.5%;left:50%;margin-left:-55px">
+      <div class="dot"></div>
+      <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
+      <div class="dot"></div>
+      <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
+      <div class="dot"></div>
+    </div>
+
 		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;left:36.5706%;width:81px;">
 			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/team.html">team</a>
 		</div>
@@ -43,7 +92,7 @@
 			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/resources.html">resources</a>
 		</div>
 
-		<div class="Layer_1 aiAbs" style="top:5.9985%;left:49.9236%;margin-left:-32.6429%;width:65.2858%;">
+		<div class="Layer_1 aiAbs" style="top:5.9985%;left:50%;margin-left:-32.6429%;width:65.2858%;">
 			<p class="pstyle1">We&rsquo;re team <span class="cstyle0">dot dot dot</span>, and we created </p>
 			<p class="pstyle1"><span class="cstyle0">Portabraille</span>, a portable braille printer!</p>
 		</div>
@@ -70,7 +119,7 @@
 			<p class="pstyle4">For a more technical overview of what the printer does and how we built it, head to our blog here.</p>
 		</div>
 
-		<div class="Layer_1 aiAbs" style="top:92.475%;left:49.9984%;margin-left:-36.2055%;width:72.4109%;">
+		<div class="Layer_1 aiAbs" style="top:92.475%;left:50%;margin-left:-36.2055%;width:72.4109%;">
 			<p class="pstyle5">This project was created as part of Principles of Engineering, a course at Olin College of Engineering in Needham, MA. </p>
 			<p class="pstyle5">*insert thank-yous/credits*</p>
 		</div>
