--- a/instructions.html
+++ b/instructions.html
@@ -20,6 +20,24 @@
 				<img class="logo" alt="Portabraille Printer Logo" src="Website Graphics\Logo.png"/>
 		</a>
 
+    <div class="dotdotdot" style="top:17%;left:50%;margin-left:-55px">
+      <div class="dot"></div>
+      <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
+      <div class="dot"></div>
+      <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
+      <div class="dot"></div>
+    </div>
+
+    <div class="circle300 blue3" style="left:31%;top:26%"></div>
+    <div class="circle400 blue2" style="left:3%;top:19%"></div>
+    <div class="circle150 blue1" style="left:6%;top:30%"></div>
+    <div class="frame" style="height:350px; width:530px; left:8%;top:22%"></div>
+
+    <div class="circle400 blue2" style="right:3%;top:60%"></div>
+    <div class="circle300 blue3" style="right:3%;top:55.5%"></div>
+    <div class="circle150 blue1" style="right:40%;top:67%"></div>
+    <div class="frame" style="height:350px; width:530px; left:52%;top:58.5%"></div>
+
 		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;left:36.5706%;width:81px;">
 			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/team.html">team</a>
 		</div>
