--- a/resources.html
+++ b/resources.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 
 <head>
@@ -20,6 +19,19 @@
 		<a href="https://maiam6242.github.io/braille-printer/">
 				<img class="logo" alt="Portabraille Printer Logo" src="Website Graphics\Logo.png"/>
 		</a>
+
+    <div class="dotdotdot" style="top:29%;left:50%;margin-left:-55px">
+      <div class="dot"></div>
+      <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
+      <div class="dot"></div>
+      <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
+      <div class="dot"></div>
+    </div>
+
+    <div class="circle250 blue2" style="left:5%;top:32.8%"></div>
+    <div class="circle250 blue2" style="left:5%;top:48%"></div>
+    <div class="circle250 blue2" style="left:5%;top:63.2%"></div>
+    <div class="circle250 blue2" style="left:5%;top:79%"></div>
 
 		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;left:36.5706%;width:81px;">
 			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/team.html">team</a>
