--- a/process.html
+++ b/process.html
@@ -20,6 +20,19 @@
 				<img class="logo" alt="Portabraille Printer Logo" src="Website Graphics\Logo.png"/>
 		</a>
 
+    <div class="circle400 blue2" style="left:3%;top:17%"></div>
+    <div class="circle300 blue3" style="left:3%;top:31%"></div>
+    <div class="circle150 blue1" style="left:40%;top:41%"></div>
+    <div class="frame" style="height:350px; width:530px; left:6%;top:21.5%"></div>
+
+    <div class="dotdotdot" style="top:59%;left:50%;margin-left:-55px">
+      <div class="dot"></div>
+      <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
+      <div class="dot"></div>
+      <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
+      <div class="dot"></div>
+    </div>
+
 		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;left:36.5706%;width:81px;">
 			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/team.html">team</a>
 		</div>
@@ -49,6 +62,18 @@
 			<p>&nbsp;</p>
 			<p>Our time frame was split into 4 2-week sprints. Read about what we did during each sprint and our budget breakdown below!</p>
 		</div>
+
+    <div style="position:absolute;top:70%;left:50%;margin-left:-500px">
+      <a style="text-decoration:none" class="btn" href="#">sprint 1!</a>
+      <div style="padding-left:40px;float:left;position:inline-block">&nbsp</div>
+      <a style="text-decoration:none" class="btn" href="#">sprint 2!</a>
+        <div style="padding-left:40px;float:left;position:inline-block">&nbsp</div>
+      <a style="text-decoration:none" class="btn" href="#">sprint 3!</a>
+        <div style="padding-left:40px;float:left;position:inline-block">&nbsp</div>
+      <a style="text-decoration:none" class="btn" href="#">sprint 4!</a>
+    </div>
+
+    <a style="text-decoration:none;position:absolute;top:79%;left:50%;margin-left:-110px" class="btn" href="#">budget!</a>
 
 		<div class="Layer_1 aiAbs aiPointText" style="top:1289px;margin-top:-17.5px;left:9.4243%;width:81px;">
 			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/team.html">team</a>
