--- a/team.html
+++ b/team.html
@@ -22,6 +22,39 @@
 				<img class="logo" alt="Portabraille Printer Logo" src="Website Graphics\Logo.png"/>
 		</a>
 
+    <div class="circle350 blue3" style="left:3%;top:11%"></div>
+    <div class="circle150 blue1" style="left:3%;top:6%"></div>
+    <div class="circle450 blue2" style="left:20%;top:6%"></div>
+    <div class="frame" style="height:350px; width:48%; left:5%;top:7%"></div>
+
+    <div class="circle175 blue1" style="left:28.5%;top:20%"></div>
+    <div class="circle350 blue2" style="left:4%;top:22.5%"></div>
+    <div class="frame" style="height:280px; width:28.5%; left:9.5%;top:21.8%"></div>
+
+    <div class="circle175 blue3" style="right:8%;top:20%"></div>
+    <div class="circle350 blue1" style="right:23%;top:22.5%"></div>
+    <div class="frame" style="height:280px; width:28.5%; right:12.7%;top:21.8%"></div>
+
+    <div class="circle175 blue2" style="left:28.5%;top:42%"></div>
+    <div class="circle350 blue1" style="left:4%;top:44.5%"></div>
+    <div class="frame" style="height:280px; width:28.5%; left:9.5%;top:43.8%"></div>
+
+    <div class="circle175 blue1" style="right:8%;top:42%"></div>
+    <div class="circle350 blue3" style="right:23%;top:44.5%"></div>
+    <div class="frame" style="height:280px; width:28.5%; right:12.7%;top:43.8%"></div>
+
+    <div class="circle175 blue3" style="right:30%;top:64%"></div>
+    <div class="circle350 blue2" style="left:28.5%;top:66.5%"></div>
+    <div class="frame" style="height:280px; width:28.5%; left:50%;margin-left:-14.25%;top:65.8%"></div>
+
+    <div class="dotdotdot" style="top:87.5%;left:50%;margin-left:-55px">
+      <div class="dot"></div>
+      <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
+      <div class="dot"></div>
+      <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
+      <div class="dot"></div>
+    </div>
+
 		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;left:36.5706%;width:81px;">
 			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/team.html">team</a>
 		</div>
