--- a/blog.html
+++ b/blog.html
@@ -1,52 +1,115 @@
 
 
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>tmb</title>
-  <style>
-  body {
-    font-family: system-ui;
-    margin: 0;
-    padding: 2rem;
-    color: #222;
-    background: #fffff;
-    line-height: 1.5;
-  }
-
-  h1 {
-    font-size: 2rem;
-    font-weight: 800;
-    margin-top: 0;
-    margin-bottom: 1rem;
-  }
-
-  h2 {
-    font-size: 1.5rem;
-    font-weight: 500;
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
-
-  p {
-    margin: 0.5rem 0;
-    max-width: 28rem;
-  }
-
-  a {
-    color: #0976ff;
-    font-weight: 600;
-    text-decoration: none;
-  }
-  .space {
-    margin-left: 0.5rem;
-  }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700&display=swap" rel="stylesheet">
+		<link href="website.css" type="text/css" rel="stylesheet">
+    <title>Portabraille Printer!</title>
 </head>
 
-<body>
-  <h1>The Braille Team</h1>
-  <h2>Blog</h2>
-  <p>Look at our blog.</p>
-</html>
+<div id="resources-box" class="ai2html" style="width:100%">
+	<div id="resources" class="artboard" style="max-width:100%;max-height:2018px" data-aspect-ratio="0.598" data-min-width="0">
+
+		<div class="header blue1"></div>
+		<div style="padding: 0 0 1755px 0;"></div>
+		<div class="footer blue1"> </div>
+
+		<a href="https://maiam6242.github.io/braille-printer/">
+				<img class="logo" alt="Portabraille Printer Logo" src="Website Graphics\Logo.png"/>
+		</a>
+
+    <div class="dotdotdot" style="top:29%;left:50%;margin-left:-55px">
+      <div class="dot"></div>
+      <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
+      <div class="dot"></div>
+      <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
+      <div class="dot"></div>
+    </div>
+
+    <div class="circle250 blue2" style="left:5%;top:32.8%"></div>
+    <div class="circle250 blue2" style="left:5%;top:48%"></div>
+    <div class="circle250 blue2" style="left:5%;top:63.2%"></div>
+    <div class="circle250 blue2" style="left:5%;top:79%"></div>
+
+		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;left:36.5706%;width:81px;">
+			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/team.html">team</a>
+		</div>
+		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;left:47.0833%;width:73px;">
+			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/blog.html">blog</a>
+		</div>
+		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;left:57.1787%;width:160px;">
+			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/instructions.html">instructions</a>
+		</div>
+		<div class="dropdown Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;left:73.6791%;width:110px;">
+			<a style="text-decoration:none; padding-bottom:10px;" class="tabs" href="https://maiam6242.github.io/braille-printer/process.html">process</a>
+      <div class="dropdown-content blue2" style="left:-10px; top:40px">
+        <a href="#">sprint 1</a>
+        <a href="#">sprint 2</a>
+        <a href="#">sprint 3</a>
+        <a href="#">sprint 4</a>
+        <a href="#">budget</a>
+      </div>
+  	</div>
+		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;left:86.3531%;width:133px;">
+			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/resources.html">resources</a>
+		</div>
+
+		<div class="Layer_1 aiAbs" style="top:13.3775%;left:49.9236%;margin-left:-32.6429%;width:65.2858%;">
+			<p class="pstyle0">Want to learn more about braille </p>
+			<p class="pstyle0">or designing products for the visually impaired?</p>
+			<p>&nbsp;</p>
+			<p class="pstyle1">Here are some links to resources we found useful during our design process. We hope you find them useful too!</p>
+		</div>
+
+		<div class="Layer_1 aiAbs" style="top:33.0506%;left:13.5898%;width:78.8732%;">
+			<p>&nbsp;</p>
+			<a class="pstyle2" href="#">Blog 1</a>
+		</div>
+		<div class="Layer_1 aiAbs" style="top:39.5506%;left:13.8049%;width:79.4532%;">
+			<p>the first line or two of this blog blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+		</div>
+		<div class="Layer_1 aiAbs" style="top:48.2661%;left:13.5898%;width:78.8732%;">
+			<p>&nbsp;</p>
+			<a class="pstyle2" href="#">Blog 2</a>
+		</div>
+		<div class="Layer_1 aiAbs" style="top:54.7661%;left:13.8049%;width:79.4532%;">
+			<p>the first line or two of this blog blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+		</div>
+		<div class="Layer_1 aiAbs" style="top:63.4321%;left:13.5898%;width:78.8732%;">
+			<p>&nbsp;</p>
+			<a class="pstyle2" href="#">Blog 3</a>
+		</div>
+		<div class="Layer_1 aiAbs" style="top:69.9321%;left:13.8049%;width:79.4532%;">
+			<p>the first line or two of this blog blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+		</div>
+		<div class="Layer_1 aiAbs" style="top:79.1433%;left:13.5898%;width:78.8732%;">
+			<p>&nbsp;</p>
+			<a class="pstyle2" href="#"><span style="font-weight:400;">10/17/19</span>&nbsp Hello!</a>
+		</div>
+		<div class="Layer_1 aiAbs" style="top:85.6433%;left:13.8049%;width:79.4532%;">
+			<p>Hello from all of us! This is the start of an adventure! Tonight, we met to finalize our sprint one objectives and plot a course for the next week . . .</p>
+		</div>
+
+		<div class="Layer_1 aiAbs aiPointText" style="top:1975px;margin-top:-17.5px;left:9.4243%;width:81px;">
+			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/team.html">team</a>
+		</div>
+		<div class="Layer_1 aiAbs aiPointText" style="top:1975px;margin-top:-17.5px;left:26.6748%;width:73px;">
+			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/blog.html">blog</a>
+		</div>
+		<div class="Layer_1 aiAbs aiPointText" style="top:1975px;margin-top:-17.5px;left:43.4786%;width:160px;">
+			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/instructions.html">instructions</a>
+		</div>
+		<div class="Layer_1 aiAbs aiPointText" style="top:1975px;margin-top:-17.5px;left:82.5611%;width:133px;">
+			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/process.html">process</a>
+		</div>
+		<div class="Layer_1 aiAbs aiPointText" style="top:1975px;margin-top:-17.5px;left:65.5309%;width:110px;">
+			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/resources.html">resources</a>
+		</div>
+
+	</div>
+
+</div>
