--- a/blog.html
+++ b/blog.html
@@ -88,7 +88,7 @@
 		</div>
 		<div class="Layer_1 aiAbs" style="top:79.1433%;left:13.5898%;width:78.8732%;">
 			<p>&nbsp;</p>
-			<a class="pstyle2" href="#"><span style="font-weight:400;">10/17/19</span>&nbsp Hello!</a>
+			<a class="pstyle2" href="https://maiam6242.github.io/braille-printer/blog-hello.html"><span style="font-weight:400;">10/17/19</span>&nbsp Hello!</a>
 		</div>
 		<div class="Layer_1 aiAbs" style="top:85.6433%;left:13.8049%;width:79.4532%;">
 			<p>Hello from all of us! This is the start of an adventure! Tonight, we met to finalize our sprint one objectives and plot a course for the next week . . .</p>
